--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                         <a href="./wet4027/dossier/dossierEXT-en.html#main">Dossier Enrolment - External (Apr 29, 2019, v2.2.1)</a>
                     </div>
                     <div class="row">
-                        <a href="./wet4027/product/product.html#main">Product Information Template - External (Aug 05, 2019, v3.0.4)</a>
+                        <a href="./wet4027/product/product.html#main">Product Information Template - External (Sept 27, 2019, v4.0.1 - develop testing)</a>
                     </div>
                     <div class="row">
                         <a href="./wet4027/converter/converter.html#main">Product Information Template Data Converter: Version 2 to Version 3 - External (Aug 14, 2019, v3.0.4)</a>
