--- a/prod_v30/product/product.html
+++ b/prod_v30/product/product.html
@@ -16,7 +16,7 @@
     <meta property="dcterms.title" content="Product Information Template: Regulatory Enrolment Process - Canada.ca">
     <meta property="dcterms.creator" content="Government of Canada, Health Canada">
     <meta property="dcterms.issued" title="W3CDTF" content="2019-01-01">
-    <meta property="dcterms.modified" title="W3CDTF" content="2019-09-26">
+    <meta property="dcterms.modified" title="W3CDTF" content="2019-09-30">
     <meta property="dcterms.subject" title="gccore" content="Drugs; Pharmaceuticals, Health care products; Regulatory Enrolment Process">
     <meta property="dcterms.language" title="ISO639-2/T" content="eng">
 
@@ -33,7 +33,7 @@
         <!-- Write closure fall-back static file -->
         <!--# include virtual="/rep-dev/cdts/static/refTop.html"-->
     </noscript>
-    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet" integrity="sha384-+2PnMSZobRWHUFuaarq2tDCtf7FFSZpeMRVRe7C0l8bRZMBTjUinKl1AuYRON/A2" crossorigin="anonymous"/>
+    <link href="../wet-boew/css/font-awesome.css" rel="stylesheet" crossorigin="anonymous"/>
     <!--<link rel="stylesheet" href="./app/styles/rep.css ">-->
     <!-- inject:css -->
     <link rel="stylesheet" href="app/styles/rep.css">
@@ -140,7 +140,7 @@
         var defPreFooter = document.getElementById("def-preFooter");
         defPreFooter.outerHTML = wet.builder.preFooter({
             cdnEnv: "prod",
-            dateModified: "2019-09-26"
+            dateModified: "2019-09-30"
         });
     </script>
 </main>
@@ -180,7 +180,7 @@
 
 <script src="app/lib/angular-aria.min.js"></script>
 
-<script src="app/scripts/drugProductAppEXT-en_20190926_1035.min.js"></script>
+<script src="app/scripts/drugProductAppEXT-en_20190930_1106.min.js"></script>
 
 <!-- endinject -->
 <!-- thirdParty:js  -->
