deploy v3.0.4 RT form to DEV - fix long running scripts issue - remove lifecycle table and userlist

--- a/prod_index.html
+++ b/prod_index.html
@@ -159,7 +159,7 @@
                         <a href="./prod_v30/company/company.html#main">Company Enrolment - External (Aug 27, 2019, v4.0.0)</a>
                     </div>
                     <div class="row">
-                        <a href="./prod_v30/transaction/regulatory-transaction.html#main">Regulatory Transaction Template - External (Sept 18, 2019, v3.0.4)</a>
+                        <a href="./prod_v30/transaction/regulatory-transaction.html#main">Regulatory Transaction Template - External (Oct 01, 2019, v3.0.4 - fix long running scripts issue)</a>
                     </div>
                     <div class="row">
                         <a href="./prod_v30/dossier/dossierEXT-en.html#main">Dossier Enrolment - External (Apr 29, 2019, v2.2.1)</a>
@@ -230,7 +230,7 @@
 
             <div class="datemod col-xs-12 mrgn-tp-lg">
                 <dl id="wb-dtmd">
-                    <dt>Date modified: Sept 26, 2019</dt>
+                    <dt>Date modified: Oct 01, 2019</dt>
                 </dl>
             </div>
         </div>
