--- a/prod_index.html
+++ b/prod_index.html
@@ -159,7 +159,7 @@
                         <a href="./prod_v30/company/company.html#main">Company Enrolment - External (Aug 27, 2019, v4.0.0)</a>
                     </div>
                     <div class="row">
-                        <a href="./prod_v30/transaction/regulatory-transaction.html#main">Regulatory Transaction Template - External (Oct 01, 2019, v3.0.4 - fix long running scripts issue)</a>
+                        <a href="./prod_v30/transaction/regulatory-transaction.html#main">Regulatory Transaction Template - External (Oct 09, 2019, v3.0.4 - fix compatibility issue)</a>
                     </div>
                     <div class="row">
                         <a href="./prod_v30/dossier/dossierEXT-en.html#main">Dossier Enrolment - External (Apr 29, 2019, v2.2.1)</a>
