--- a/index.html
+++ b/index.html
@@ -165,10 +165,10 @@
                         <h2> External User Links</h2>
                     </div>
                     <div class="row">
-                        <a href="./wet4027/company/company.html#main">Company Enrolment - External (Oct 10, 2019, v4.0.1 - Save Warning)</a>
+                        <a href="./wet4027/company/company.html#main">Company Enrolment - External (Oct 22, 2019, v4.0.1 - Save Warning bug fix)</a>
                     </div>
                     <div class="row">
-                        <a href="./wet4027/transaction/regulatory-transaction.html#main">Regulatory Transaction Template - External (Oct 01, 2019, v4.0.4)</a>
+                        <a href="./wet4027/transaction/regulatory-transaction.html#main">Regulatory Transaction Template - External (Oct 22, 2019, v4.0.6)</a>
                     </div>
                     <div class="row">
                         <a href="./wet4027/dossier/dossierEXT-en.html#main">Dossier Enrolment - External (Apr 29, 2019, v2.2.1)</a>
@@ -188,7 +188,7 @@
                         <h2>Internal User (i.e. HPFB) Links</h2>
                     </div>
                     <div class="row">
-                        <a href="./wet4027/company/companyINT-en.html#main">Company Enrolment -Internal (Oct 10, 2019, v4.0.1 - Save Warning) </a>
+                        <a href="./wet4027/company/companyINT-en.html#main">Company Enrolment -Internal (Oct 22, 2019, v4.0.1 - Save Warning bug fix) </a>
                     </div>
                     <div class="row">
                         <a href="./wet4027/dossier/dossierINT-en.html#main">Dossier Enrolment Internal (Apr 29, 2019, v2.2.1)</a>
@@ -242,7 +242,7 @@
 
             <div class="datemod col-xs-12 mrgn-tp-lg">
                 <dl id="wb-dtmd">
-                    <dt>Date modified: Oct 10, 2019</dt>
+                    <dt>Date modified: Oct 22, 2019</dt>
                 </dl>
             </div>
         </div>
