deploy v4.0.3 PI form to DEV - development update

--- a/wet4027/product/product.html
+++ b/wet4027/product/product.html
@@ -16,7 +16,7 @@
     <meta property="dcterms.title" content="Product Information Template: Regulatory Enrolment Process - Canada.ca">
     <meta property="dcterms.creator" content="Government of Canada, Health Canada">
     <meta property="dcterms.issued" title="W3CDTF" content="2019-01-01">
-    <meta property="dcterms.modified" title="W3CDTF" content="2019-10-11">
+    <meta property="dcterms.modified" title="W3CDTF" content="2019-10-30">
     <meta property="dcterms.subject" title="gccore" content="Drugs; Pharmaceuticals, Health care products; Regulatory Enrolment Process">
     <meta property="dcterms.language" title="ISO639-2/T" content="eng">
 
@@ -191,14 +191,14 @@
             <p class="pagetag">
                 <strong>From <a href="https://www.canada.ca/en/health-canada.html">Health Canada</a></strong>
             </p>
-            <div class="pull-right btn-group-sm hide" id="expand_collapse_top_btns">
-                <button class="btn btn-info btn-sm active " id="btn_expandAll_top" onclick="expandAll('expandableForm')"
-                >&nbsp;+&nbsp;Expand All
-                </button>
-                <button class="btn btn-info btn-sm active " id="btn_collapseAll_top" onclick="collapseAll('expandableForm')"
-                >&nbsp;-&nbsp;Collapse All
-                </button>
-            </div>
+            <!--<div class="pull-right btn-group-sm hide" id="expand_collapse_top_btns">-->
+                <!--<button class="btn btn-info btn-sm active " id="btn_expandAll_top" onclick="expandAll('expandableForm')"-->
+                <!--&gt;&nbsp;+&nbsp;Expand All-->
+                <!--</button>-->
+                <!--<button class="btn btn-info btn-sm active " id="btn_collapseAll_top" onclick="collapseAll('expandableForm')"-->
+                <!--&gt;&nbsp;-&nbsp;Collapse All-->
+                <!--</button>-->
+            <!--</div>-->
         </div>
         <div class=" col-md-12 module-table-contents" id="content_table">
             <section class="panel panel-default">
@@ -238,7 +238,7 @@
         var defPreFooter = document.getElementById("def-preFooter");
         defPreFooter.outerHTML = wet.builder.preFooter({
             cdnEnv: "prod",
-            dateModified: "2019-10-11"
+            dateModified: "2019-10-30"
         });
     </script>
 </main>
@@ -278,7 +278,7 @@
 
 <script src="app/lib/angular-aria.min.js"></script>
 
-<script src="app/scripts/drugProductAppEXT-en_20191011_1044.min.js"></script>
+<script src="app/scripts/drugProductAppEXT-en_20191030_1610.min.js"></script>
 
 <!-- endinject -->
 <!-- thirdParty:js  -->
