--- a/wet4027/product/produit.html
+++ b/wet4027/product/produit.html
@@ -16,7 +16,7 @@
     <meta property="dcterms.title" content="Modèle d'information sur le produit: Processus d'inscription réglementaire - Canada.ca">
     <meta property="dcterms.creator" content="Gouvernement du Canada, Santé Canada">
     <meta property="dcterms.issued" title="W3CDTF" content="2019-01-01">
-    <meta property="dcterms.modified" title="W3CDTF" content="2019-10-11">
+    <meta property="dcterms.modified" title="W3CDTF" content="2019-10-30">
     <meta property="dcterms.subject" title="gccore" content="Médicaments; Pharmaceutiques, produits de santé; Processus d’inscription réglementaire">
     <meta property="dcterms.language" title="ISO639-2/T" content="fra">
 
@@ -53,8 +53,45 @@
             window.onbeforeunload = function(){
                 return 'fr_The form has been updated, do you want to stay on the page?';
             }
-            $('.modal-body').after('<div class="modal-footer"><button type="button" id="ftrClose" class="btn btn-sm btn-primary pull-left overlay-close" style="" title="Fermer (touche d&#39;échappement)">Fermer<span class="wb-inv">(touche d&#39;échappement)</span></button></div>');
-            $( "input[type=date]" ).trigger( "wb-init.wb-date" );
+            $('.modal-body:first-child').after('<div class="modal-footer"><button type="button" id="ftrClose" class="btn btn-sm btn-primary pull-left overlay-close" style="" title="Close (escape key)">Close<span class="wb-inv">(escape key)</span></button></div>');
+            setTimeout(setupDateFields, 1000);
+            setTimeout(setupDataList, 1000);
+            setTimeout(initialTopExpandCollapse, 1000);
+        }
+        var maxDateTimes = 5;
+        function setupDateFields(){
+            initialDateInput();
+        }
+        function initialDateInput(){
+            if($( "input[type=date]" ).length == 0 && maxDateTimes > 0) {
+                setTimeout(setupDateFields, 200);
+                // console.log("continue...");
+                maxDateTimes --;
+            } else {
+                $( "input[type=date]" ).trigger( "wb-init.wb-date" );
+                window.location.href = "#main";
+                // console.log("initialed");
+            }
+        }
+        var maxDataListTimes = 5;
+        function setupDataList(){
+            initialDataList();
+        }
+        function initialDataList(){
+            if($( "input[type=list]" ).length == 0 && maxDataListTimes > 0) {
+                setTimeout(setupDataList, 200);
+                maxDataListTimes --;
+            } else {
+                $( "input[type=list]" ).trigger( "wb-init.wb-datalist" );
+            }
+        }
+        function initialTopExpandCollapse(){
+            if($("ng-form[name='drugProdCtrl.drugProdForm']").length > 0){
+                $('#expand_collapse_top_btns').removeClass('hide');
+            }
+        }
+        function onchange(e) {
+            console.log(e);
         }
         function focusOnRow(e, alter) {
             var myTable = $(e).closest('table');
@@ -153,7 +190,7 @@
             <p class="pagetag">
                 <strong>De <a href="https://www.canada.ca/fr/sante-canada.html">Santé Canada</a></strong>
             </p>
-            <div class="pull-right btn-group-sm">
+            <div class="pull-right btn-group-sm hide">
                 <button class="btn btn-info btn-sm active " id="btn_expandAll" onclick="expandAll('expandableForm')"
                 >&nbsp;+&nbsp;Expand All
                 </button>
@@ -200,7 +237,7 @@
         var defPreFooter = document.getElementById("def-preFooter");
         defPreFooter.outerHTML = wet.builder.preFooter({
             cdnEnv: "prod",
-            dateModified: "2019-10-11"
+            dateModified: "2019-10-30"
         });
     </script>
 </main>
@@ -240,7 +277,7 @@
 
 <script src="app/lib/angular-aria.min.js"></script>
 
-<script src="app/scripts/drugProductAppEXT-fr_20191011_1044.min.js"></script>
+<script src="app/scripts/drugProductAppEXT-fr_20191030_1610.min.js"></script>
 
 <!-- endinject -->
 <!-- thirdParty:js  -->
