--- a/vdct_index.html
+++ b/vdct_index.html
@@ -150,14 +150,14 @@
         </div>
         <div>
             <div class="row">
-                <h2>REP Form Links (Last updated: April 11, 2019)</h2>
-            </div>
-            <!--div class="row">
-                <div class="col-md-12 form-group">
-                    <a href="./company/companyEXT-en.html">Company Enrolment</a>
-                </div>
+                <h2>REP Form Links (Last updated: October 31, 2019)</h2>
             </div>
             <div class="row">
+                <div class="col-md-12 form-group">
+                    <a href="./company/company.html">Company Enrolment (VDD/CTA V4.0) </a>
+                </div>
+            </div>
+            <!--div class="row">
                 <div class="col-md-12 form-group">
                     <a href="./dossier/dossierEXT-en.html">Dossier Enrolment</a>
                 </div>
@@ -166,15 +166,10 @@
                 <div class="col-md-12 form-group">
                     <a href="./drugProduct/drugProductEXT-en.html">Product Information Template</a>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-md-12 form-group">
-                    <a href="./transaction/transactionEXT-en.html">Regulatory Transaction Template</a>
-                </div>
             </div-->
             <div class="row">
                 <div class="col-md-12 form-group">
-                    <a href="./wet4027/converter/converter.html#main">Product Information Template Data Converter: Version 2 to Version 3</a>
+                    <a href="./transaction/regulatory-transaction.html">Regulatory Transaction Template (VDD/CTA V4.0) </a>
                 </div>
             </div>
             <div class="row">
@@ -188,6 +183,19 @@
                 </div>
             </div-->
         </div>
+        <div>
+            <div class="row">
+                <h2>Stylesheet Download Links (Last updated: October 31, 2019)</h2>
+            </div>
+            <div class="row">
+                <div class="col-md-12 form-group">
+                    <a href="./stylesheet/pharmabio_stylesheets_4_0_en.zip">Download V4.0 stylesheet zip file (English version) </a>
+                </div>
+            </div>
+            <!--<div class="row">-->
+                <!--<a href="./stylesheet/pharmabio_stylesheets_en.zip">Download V1.0, V2.0, V3.0 and V4.0 stylesheet zip file (English version) </a>-->
+            <!--</div>-->
+        </div>
 
 
     </div>
@@ -195,7 +203,7 @@
     <div class="row">
         <div class="datemod col-xs-12 mrgn-tp-lg">
             <dl id="wb-dtmd">
-                <dt>Date modified: March 26, 2019</dt>
+                <dt>Date modified: October 31, 2019</dt>
             </dl>
         </div>
     </div>
