--- a/mds_index.html
+++ b/mds_index.html
@@ -157,9 +157,9 @@
                     <div class="row">
                         <a href="./mds/company/en/index.html#main">Company Enrolment</a>
                     </div>
-                    <div class="row">
-                        <a href="https://www.canada.ca/en/health-canada/services/drugs-health-products/drug-products/applications-submissions/guidance-documents/regulatory-enrolment-process/medical-device-dossier-template.html">Dossier Enrolment</a>
-                    </div>
+                    <!--<div class="row">-->
+                        <!--<a href="https://www.canada.ca/en/health-canada/services/drugs-health-products/drug-products/applications-submissions/guidance-documents/regulatory-enrolment-process/medical-device-dossier-template.html">Dossier Enrolment</a>-->
+                    <!--</div>-->
                     <div class="row">
                         <a href="./mds/applicationInfo/en/index.html#main">Application Information</a>
                     </div>
