PB cost recovery RT v3.1.6 DEV deploy

--- a/prod_index.html
+++ b/prod_index.html
@@ -159,11 +159,11 @@
                         <a href="./prod_v3/company/company.html#main">Company Enrolment - External (Dec 18, 2019, v3.0.5)</a>
                     </div>
                     <div class="row">
-                        <a href="./prod_v3/transactionCostRecovery/regulatory-transaction.html#main">Regulatory Transaction Template - External (Dec 16, 2019, v3.1.5 - Cost Recovery)</a>
+                        <a href="./prod_v3/transactionCostRecovery/regulatory-transaction.html#main">Regulatory Transaction Template - External (Feb 07, 2020, v3.1.6 - Cost Recovery)</a>
                     </div>
-                    <div class="row">
-                        <a href="./prod_v3/dossier/dossierEXT-en.html#main">Dossier Enrolment - External (Apr 29, 2019, v2.2.1)</a>
-                    </div>
+                    <!--<div class="row">-->
+                        <!--<a href="./prod_v3/dossier/dossierEXT-en.html#main">Dossier Enrolment - External (Apr 29, 2019, v2.2.1)</a>-->
+                    <!--</div>-->
                     <div class="row">
                         <a href="./prod_v3/product/product.html#main">Product Information Template - External (Dec 18, 2019, v3.0.5)</a>
                     </div>
@@ -181,9 +181,9 @@
                     <div class="row">
                         <a href="./prod_v3/company/companyINT-en.html#main">Company Enrolment -Internal (Dec 18, 2019, v3.1.0) </a>
                     </div>
-                    <div class="row">
-                        <a href="./prod_v3/dossier/dossierINT-en.html#main">Dossier Enrolment Internal (Apr 29, 2019, v2.2.1)</a>
-                    </div>
+                    <!--<div class="row">-->
+                        <!--<a href="./prod_v3/dossier/dossierINT-en.html#main">Dossier Enrolment Internal (Apr 29, 2019, v2.2.1)</a>-->
+                    <!--</div>-->
                     <div class="row">
                         <a href="./repDiff/diffForm-en.html">Difference Engine (Jun 17, 2019)</a>
                     </div>
@@ -230,7 +230,7 @@
 
             <div class="datemod col-xs-12 mrgn-tp-lg">
                 <dl id="wb-dtmd">
-                    <dt>Date modified: Dec 18, 2019</dt>
+                    <dt>Date modified: Feb 07, 2020</dt>
                 </dl>
             </div>
         </div>
