P/B CR RT form v3.1 deploy to DEV

--- a/prod_index.html
+++ b/prod_index.html
@@ -132,7 +132,7 @@
         <div class="container">
             <div class="row">
                 <ol class="breadcrumb">
-                    <li><a href="https://lam-dev.hres.ca/rep-dev/index.htmlv">Home</a></li>
+                    <li><a href="https://lam-dev.hres.ca/rep-dev/index.html">Home</a></li>
                 </ol>
             </div>
         </div>
