P/B CR forms and stylesheets v3.1.8 deploy to DEV

--- a/prod_index.html
+++ b/prod_index.html
@@ -158,9 +158,6 @@
                     <div class="row">
                         <a href="./prod_v3/company/company.html#main">Company Enrolment - External (Feb 27, 2020, v3.1.8)</a>
                     </div>
-                    <div class="row">
-                        <a href="./prod_v3/transactionCostRecovery/regulatory-transaction.html#main">Regulatory Transaction Template - External (Feb 27, 2020, v3.1.8 - Cost Recovery)</a>
-                    </div>
                     <!--<div class="row">-->
                         <!--<a href="./prod_v3/dossier/dossierEXT-en.html#main">Dossier Enrolment - External (Apr 29, 2019, v2.2.1)</a>-->
                     <!--</div>-->
@@ -170,9 +167,22 @@
                     <div class="row">
                         <a href="./prod_v3/converter/converter.html#main">Product Information Template Data Converter: Version 2 to Version 3 - External (Aug 14, 2019, v3.0.4)</a>
                     </div>
-                    <!--<div class="row">-->
-                        <!--<a href="./prod_v3/transactionCostRecovery/transactionEXT-en.html#main">Regulatory Transaction Template – COST RECOVERY - External (Mar 18, 2019)</a>-->
-                    <!--</div>-->
+                    <div class="row">
+                        <a href="./prod_v3/transaction/regulatory-transaction.html#main">Regulatory Transaction Template - External (Oct 10, 2019)</a>
+                    </div>
+                    <div class="row">
+                        <span>
+                            <strong class="text-danger">Important Note: This template is to be used for regulatory transactions intended for filing BEFORE April 1, 2020 ONLY.</strong>
+                        </span>
+                    </div>
+                    <div class="row">
+                        <a href="./prod_v3/transactionCostRecovery/regulatory-transaction.html#main">Regulatory Transaction Template - External (Feb 27, 2020, v3.1.8 - Cost Recovery)</a>
+                    </div>
+                    <div class="row">
+                        <span>
+                            <strong class="text-danger">Important Note: This template includes the revised Fees effective April 1, 2020 and should be used for regulatory transactions intended for filing on or AFTER April 1, 2020.</strong>
+                        </span>
+                    </div>
                 </div>
                 <div>
                     <div class="row">
