P/B RT v3.1.8 deploy requirement to DEV - add fr index page

--- a/prod_index.html
+++ b/prod_index.html
@@ -142,11 +142,6 @@
 
 
     <!--content starts here -->
-
-    <div>
-
-        <div>
-
             <div>
                 <div class="row">
                     <h1 property="name" id="wb-cont"> Regulatory Enrolment Process: Pharma/Bio </h1>
@@ -240,20 +235,18 @@
 
             <div class="datemod col-xs-12 mrgn-tp-lg">
                 <dl id="wb-dtmd">
-                    <dt>Date modified: Feb 27, 2020</dt>
+                    <dt>Date modified: Mar 04, 2020</dt>
                 </dl>
             </div>
-        </div>
-    </div>
 </main>
-<aside class="gc-nttvs container">
-    <h2>Government of Canada activities and initiatives</h2>
+<!--<aside class="gc-nttvs container">-->
+    <!--<h2>Government of Canada activities and initiatives</h2>-->
 
-    <div id="gcwb_prts" class="wb-eqht row wb-init wb-data-ajax-replace-inited wb-eqht-inited"
-         data-ajax-append="https://cdn.canada.ca/gcweb-cdn-live/features/features-en.html">
+    <!--<div id="gcwb_prts" class="wb-eqht row wb-init wb-data-ajax-replace-inited wb-eqht-inited"-->
+         <!--data-ajax-append="https://cdn.canada.ca/gcweb-cdn-live/features/features-en.html">-->
 
-    </div>
-</aside>
+    <!--</div>-->
+<!--</aside>-->
 <footer role="contentinfo" id="wb-info">
     <nav role="navigation" class="container wb-navcurr">
         <h2 class="wb-inv">About government</h2>
