P/B cost recovery CO internal v3.1.8 deploy to internal pilot

--- a/index.html
+++ b/index.html
@@ -159,6 +159,9 @@
             <div class="row">
                 <a href="./PROD/company/companyINT-en.html">Company Enrolment - Internal (effective August 2019, updated on July 26, 2019) </a>
             </div>
+            <div class="row">
+                <a href="./PROD/company-cr/companyINT-en.html">Company Enrolment - Internal (effective April 2020, updated on March 06, 2020) </a>
+            </div>
 
             <!--<div class="row">-->
                 <!--<a href="./activity/activityINT-en.html">Activity Enrolment - Internal (Deployed June 18, 2018)</a>-->
