MD RT v2.0.2 deploy to DEV

--- a/mds_index.html
+++ b/mds_index.html
@@ -164,7 +164,7 @@
                         <a href="./mds/applicationInfo/en/index.html#main">Application Information Enrolment -External (Jul 30, 2019, V1.0.2)</a>
                     </div>
                     <div class="row">
-                        <a href="./mds/transaction/en/index.html#main">Transaction Enrolment External (Jan 31, 2020, V2.0.0)</a>
+                        <a href="./mds/transaction/en/index.html#main">Transaction Enrolment External (Mar 12, 2020, V2.0.2)</a>
                     </div>
                 </div>
                 <div>
@@ -192,20 +192,20 @@
 
             <div class="datemod col-xs-12 mrgn-tp-lg">
                 <dl id="wb-dtmd">
-                    <dt>Date modified: Jan 31, 2020</dt>
+                    <dt>Date modified: Mar 12, 2020</dt>
                 </dl>
             </div>
         </div>
     </div>
 </main>
-<aside class="gc-nttvs container">
-    <h2>Government of Canada activities and initiatives</h2>
+<!--<aside class="gc-nttvs container">-->
+    <!--<h2>Government of Canada activities and initiatives</h2>-->
 
-    <div id="gcwb_prts" class="wb-eqht row wb-init wb-data-ajax-replace-inited wb-eqht-inited"
-         data-ajax-append="https://cdn.canada.ca/gcweb-cdn-live/features/features-en.html">
+    <!--<div id="gcwb_prts" class="wb-eqht row wb-init wb-data-ajax-replace-inited wb-eqht-inited"-->
+         <!--data-ajax-append="https://cdn.canada.ca/gcweb-cdn-live/features/features-en.html">-->
 
-    </div>
-</aside>
+    <!--</div>-->
+<!--</aside>-->
 <footer role="contentinfo" id="wb-info">
     <nav role="navigation" class="container wb-navcurr">
         <h2 class="wb-inv">About government</h2>
