MD RT v2.0.2 deploy to DEV - ubg fix

--- a/mds/transaction/en/index.html
+++ b/mds/transaction/en/index.html
@@ -21,7 +21,7 @@
 
   <!-- Web Experience Toolkit (WET) / Boîte à outils deloca l'expérience Web (BOEW)
          wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-  <!--<title></title>-->
+  <title>Transaction Template: Regulatory Enrolment Process - Canada.ca</title>
   <meta content="width=device-width,initial-scale=1" name="viewport" />
   <!-- Additional analytics, if required. -->
   <!--/*/ <th:block th:replace="analytics/analytics-header"></th:block> /*/-->
@@ -148,5 +148,5 @@
   <!-- endinject -->
 
 
-<script src="runtime.a8ef3a8272419c2e2c66.js" defer></script><script src="polyfills-es5.ed1fa0ee9090c664f7f1.js" nomodule defer></script><script src="polyfills.c11b48da8375c1718921.js" defer></script><script src="main.a6549746b405aa4bcd9c.js" defer></script></body>
+<script src="runtime.a8ef3a8272419c2e2c66.js" defer></script><script src="polyfills-es5.ed1fa0ee9090c664f7f1.js" nomodule defer></script><script src="polyfills.c11b48da8375c1718921.js" defer></script><script src="main.2b28e1a0bccc277c7024.js" defer></script></body>
 </html>
