deploy PB cost recovery v3.1 RT and index update to DEV

--- a/prod_index-fr.html
+++ b/prod_index-fr.html
@@ -164,20 +164,20 @@
             <div class="row">
                 <a href="./prod_v3/transaction/réglementaire-transaction.html#main">Modèle de transaction réglementaire (mise à jour octobre 2019) </a>
             </div>
-            <div class="row">
-                        <span>
-                            <strong class="text-danger">Remarque importante: Ce modèle doit être utilisé pour les transactions réglementaires prévues à être déposées AVANT le 1er avril 2020 SEULEMENT.</strong>
-                        </span>
-            </div>
+            <!--<div class="row">-->
+                        <!--<span>-->
+                            <!--<strong class="text-danger">Remarque importante: Ce modèle doit être utilisé pour les transactions réglementaires prévues à être déposées AVANT le 1er avril 2020 SEULEMENT.</strong>-->
+                        <!--</span>-->
+            <!--</div>-->
             <br>
             <div class="row">
                 <a href="./prod_v3/transactionCostRecovery/réglementaire-transaction.html#main">Modèle de transaction réglementaire (mise à jour mars 2020) </a>
             </div>
-            <div class="row">
-                        <span>
-                            <strong class="text-danger">Remarque importante: Ce modèle comprend les frais révisés à partir du 1er avril 2020 et devrait être utilisé pour les transactions réglementaires prévues à être déposées le 1er avril 2020 ou APRÈS.</strong>
-                        </span>
-            </div>
+            <!--<div class="row">-->
+                        <!--<span>-->
+                            <!--<strong class="text-danger">Remarque importante: Ce modèle comprend les frais révisés à partir du 1er avril 2020 et devrait être utilisé pour les transactions réglementaires prévues à être déposées le 1er avril 2020 ou APRÈS.</strong>-->
+                        <!--</span>-->
+            <!--</div>-->
         </div>
 
         <div>
