--- a/prod_index.html
+++ b/prod_index.html
@@ -165,19 +165,19 @@
                     <div class="row">
                         <a href="./prod_v3/transaction/regulatory-transaction.html#main">Regulatory Transaction Template - External (Oct 10, 2019)</a>
                     </div>
-                    <div class="row">
-                        <span>
-                            <strong class="text-danger">Important Note: This template is to be used for regulatory transactions intended for filing BEFORE April 1, 2020 ONLY.</strong>
-                        </span>
-                    </div>
+                    <!--<div class="row">-->
+                        <!--<span>-->
+                            <!--<strong class="text-danger">Important Note: This template is to be used for regulatory transactions intended for filing BEFORE April 1, 2020 ONLY.</strong>-->
+                        <!--</span>-->
+                    <!--</div>-->
                     <div class="row">
                         <a href="./prod_v3/transactionCostRecovery/regulatory-transaction.html#main">Regulatory Transaction Template - External (Feb 27, 2020, v3.1.8 - Cost Recovery)</a>
                     </div>
-                    <div class="row">
-                        <span>
-                            <strong class="text-danger">Important Note: This template includes the revised Fees effective April 1, 2020 and should be used for regulatory transactions intended for filing on or AFTER April 1, 2020.</strong>
-                        </span>
-                    </div>
+                    <!--<div class="row">-->
+                        <!--<span>-->
+                            <!--<strong class="text-danger">Important Note: This template includes the revised Fees effective April 1, 2020 and should be used for regulatory transactions intended for filing on or AFTER April 1, 2020.</strong>-->
+                        <!--</span>-->
+                    <!--</div>-->
                 </div>
                 <div>
                     <div class="row">
